# tb2_unizar

./: README.md  create_workspace.sh  docker-compose.yml
docker/: Dockerfile
setup_tb/: setup_tb.sh
tb2_unizar/: CMakeLists.txt  package.xml  start_turtlebot.bash  stop_tmuxinator_tb.bash
tb2_unizar/config/: hokuyo_config.yaml  rviz.rviz
tb2_unizar/config/gazebo/: nav2_params.yaml
tb2_unizar/config/hokuyo/: hokuyo_config.yaml  kobuki_params.yaml  nav2_params.yaml
tb2_unizar/config/optitrack/: kobuki_params.yaml  mocap4r2_optitrack.yaml  nav2_params.yaml
tb2_unizar/include/tb2_unizar/: gt_pose_broadcaster_node.hpp
tb2_unizar/launch/: hokuyo.launch.py  kobuki_description_unizar.launch.py  kobuki_gazebo.launch.py  kobuki_node.launch.py  kobuki_node_optitrack.launch.py  nav2_bringup.launch.py  nav2_map_server.launch.py  spawn_tb2.py
tb2_unizar/maps/: dummy.yaml  i3aApril2025.pgm  i3aApril2025.yaml  i3a_april_2025.pgm  i3a_april_2025.yaml
tb2_unizar/src/: gt_pose_broadcaster_node.cpp
tb2_unizar/tmuxinator/: launch_ground_station_optitrack_turtlebot.yaml  launch_ground_station_teleop.yaml  launch_turtlebot_hokuyo.yaml  launch_turtlebot_hokuyo_mapping.yaml  launch_turtlebot_optitrack.yaml  launch_turtlebot_simulation.yaml  launch_turtlebot_teleop.yaml
tb2_unizar/urdf/: README.md  turtlebot_common_library.urdf.xacro  turtlebot_unizar_hokuyo_top.urdf.xacro  turtlebot_unizar_optitrack.urdf.xacro
tb2_unizar/urdf/robots/: compiled_turtlebot_unizar_optitrack.urdf
tb2_unizar/urdf/sensors/: astra.urdf.xacro  gimbal.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  xtion_pro.urdf.xacro
tb2_unizar/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
