<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb2_unizar</name>
  <version>1.0.0</version>
  <description>Bringup scripts and configurations for the turtlebot2 Unizar stack</description>
  <maintainer email="davidmc@unizar.es">David Morilla-Cabello</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mocap4r2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>